fix: Fix menu item chip text visibility

--- a/src/javascript/ContentEditor/editorTabs/AdvancedOptions/AdvancedOptionsNavigation/AdvancedOptionsNavigation.scss
+++ b/src/javascript/ContentEditor/editorTabs/AdvancedOptions/AdvancedOptionsNavigation/AdvancedOptionsNavigation.scss
@@ -19,3 +19,7 @@
 
     padding-right: 28px;
 }
+
+.menuItemChipNoWidth {
+  width: unset;
+}
